<resources>
    <string name="app_name">Quit Smoking</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="badge">Badge</string>
    <string name="country_prompt">Country</string>
    <string name="badge_title">Badge</string>
    <string name="form_q_year">Which year you started smoking?</string>
    <string name="form_q_year_placeholder">e.g. 1988</string>
    <string name="form_rule_info">NOTE: Your progress won\'t be altered if you smoke by mistake, but it will impact the score for each badge. Aim to achieve a 100% score for every badge. You can download the progress JSON file to review your complete status. Please be aware that resetting the data will result in its deletion.</string>
    <string name="banner_msg">Everyday you are wining!!!</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="lorem_ipsum_small">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="lorem_ipsum_smaller">Lorem Ipsum</string>
    <string name="displayCountMsgTemplate">%s cigarettes missed to kill you\n%s more to get awarded with %s</string>
    <string name="shareMsgTemplate">%s cigarettes missed to kill you\n%s%s we saved for your next trip\n%s cigarette/poison free</string>
    <string name="displayMoneyMsgTemplate">%s%s we saved for your next trip \n%s%s more to get awarded with %s</string>
    <string name="displayTotalHowManyCigSmokedMsgTemplate">Since we started, you have smoked %s cigarette(s).</string>
    <string name="displayTotalHowMuchMoneySpentMsgTemplate">Since we started, cigarettes have wasted %s%s of your money.</string>
    <string name="displayDayMsgTemplate">%s cigarette/poison free\n%s more to get awarded with %s</string>
    <string name="progressMsg">progress…</string>
    <string name="dummyMsg">--</string>
    <string name="penaltyButtonLevel">One Cigarette, add penalty</string>
    <string name="submitButtonLevel">Let us begin</string>
    <string name="priceEG">e.g. 17.12</string>
    <string name="countEG">e.g. 18</string>
    <string name="price_of_your_cigarette">Price of your cigarette (average)</string>
    <string name="how_many_you_smoke_in_a_day_on_average">How many you smoke in a day on average?</string>
    <string name="placeholder_select_country">Select your country</string>

    <string name="disclaimer_1">Thank you for using our app. Kindly note that this application tracks your smoking data based solely on the information provided by you. It employs basic mathematical calculations to determine your smoking status. However, it is important to understand that this app does not possess or claim any medical knowledge or expertise.</string>
    <string name="disclaimer_2">For any medical assistance or advice regarding smoking cessation, please consult a qualified medical professional or seek guidance from a healthcare expert. Your health and well-being are of paramount importance.</string>
    <string name="disclaimer_3">Wishing you all the best on your journey towards a healthier lifestyle. Stay motivated and prioritize your health.</string>

    <string name="about_title">About Us - Quit Smoking and Breathe Easy Again</string>
    <string name="about_description">Did you know smoking is the leading cause of preventable death globally? Every year, millions of people lose their lives due to smoking-related illnesses. Smoking damages nearly every organ in your body, leading to:</string>
    <string name="hope_message">But there\'s hope! Quitting smoking, no matter how long you\'ve been doing it, has immediate and long-term health benefits.</string>
    <string name="partner_message">This app is your partner on your journey to a smoke-free life. We provide tools and resources to help you:</string>
    <string name="track_progress">• <b>Track your progress:</b> Monitor your cravings, smoke-free days, and money saved.</string>
    <string name="expand_lifeline">• <b>Expand your lifeline:</b> See how quitting smoking can add years to your life expectancy.</string>
    <string name="save_money">• <b>Save money:</b> Track the money you\'re saving by not buying cigarettes. You\'d be surprised how quickly it adds up!</string>
    <string name="money_usage">The money you save by quitting smoking could be used for:</string>
    <string name="vacation">• A dream vacation</string>
    <string name="tech_upgrade">• Upgrading your tech gear</string>
    <string name="savings_goal">• Contributing to your savings goals</string>
    <string name="price_of_smoking">Death is not the only price you pay for smoking. It takes a toll on your finances, your energy levels, and your overall well-being. Quitting is an investment in yourself and your future.</string>
    <string name="developer_passion">We, the developers, are passionate about helping people quit smoking and live healthier lives. We believe everyone deserves a chance to breathe easy and enjoy a longer, healthier life.</string>
    <string name="download_app">Download the app today and start your journey to a smoke-free future! Share it with your friends and family who might also benefit. Every person who quits makes a difference.</string>
    <string name="feeling_generous">Feeling generous? Consider buying me a coffee to support further development!</string>
    <string name="coffee_link">buy me a coffee</string>
    <string name="lung_cancer">• <b>Lung cancer:</b> The most common smoking-related cancer, claiming countless lives.</string>
    <string name="heart_disease">• <b>Heart disease:</b> Smoking clogs arteries and increases the risk of heart attacks and strokes.</string>
    <string name="copd">• <b>Chronic obstructive pulmonary disease (COPD):</b> This group of lung diseases makes it hard to breathe.</string>
    <string name="other_cancers">• <b>Cancer of the mouth, throat, esophagus, bladder, and kidney:</b> Smoking increases the risk of these cancers.</string>
    <string name="dropdown_reset">Reset</string>
    <string name="dropdown_dummy">Item 2</string>
    <string name="action_dropdown_text">...</string>
    <string name="todo">TODO</string>
    <string name="reload">Reload</string>
    <string name="reset">Reset</string>
    <string name="download_progress">Download Progress</string>
    <string name="share_progress">Share Progress</string>
    <string name="smoked_in_current_year">Your Progress:</string>

    <string-array name="line_chart_options">
        <item>Last 7 days</item>
        <item>Last 2 weeks</item>
        <item>Last 30 days</item>
        <item>Last 3 months</item>
        <item>Last 12 months</item>
    </string-array>
</resources>